--- a/scripts/Test GPU.ipynb
+++ b/scripts/Test GPU.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3432604080007877\n"
+      "0.33389749100024346\n"
      ]
     }
    ],
@@ -62,29 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1.8340112 ,  0.90772706,  0.46055439,  4.21459723,  1.80847514], dtype=float32)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gs[0][0,0,:].eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -97,20 +86,20 @@
     "    xt = x*math.cos(theta) + y*math.sin(theta)\n",
     "    yt = -x*math.sin(theta) + y*math.cos(theta)\n",
     "    z1 = -(xt**2 + (gamma*yt)**2)/(2*sigma**2)\n",
-    "    z2 = 1j*2*math.pi*f*xt+psi\n",
-    "    value = f**2/(math.pi*gamma)*math.exp(z1)*cmath.exp(z2)\n",
+    "    z2 = 2*math.pi*f*xt+psi\n",
+    "    value = f**2/(math.pi*gamma)*math.exp(z1)*math.cos(z2)\n",
     "    return value\n",
     "\n",
     "def gabor_filter_dev(x,y,params):\n",
     "    f,gamma,sigma,theta,psi = params\n",
     "    z2 = psi\n",
-    "    value = f**2/(math.pi*gamma)*cmath.exp(z2)\n",
+    "    value = f**2/(math.pi*gamma)*math.cos(z2)\n",
     "    return value\n",
     "\n",
     "\n",
     "def g_psi(x,y,params):\n",
     "    f,gamma,sigma,theta,psi = params\n",
-    "    value = gabor_filter(x,y,params)  \n",
+    "    value = gabor_filter_dev(x,y,params)  \n",
     "    return value\n",
     "\n",
     "def gabor_filter_update_dev(size, params, f):\n",
@@ -143,7 +132,7 @@
     "\n",
     "        [num_filters, num_channels, filter_size, filter_size] = ws.get_value().shape\n",
     "        \n",
-    "        position = filter_size/2\n",
+    "        position = math.floor(filter_size/2)\n",
     "        ws_grad = gradients[0][:,:,position:position+1,position]\n",
     "        #g_gradient = g_psi(0,0,g)\n",
     "\n",
@@ -170,27 +159,74 @@
     "                #g_gradient = np.array([0,0,0,0,psi_gradient]).reshape(1,-1)\n",
     "                #g_gradients = np.concatenate((g_gradients,g_gradient),axis=1)\n",
     "\n",
-    "        additions =  np.array(additions).reshape(num_filters,num_channels,-1)\n",
+    "        additions =  np.array(additions, dtype=np.float32).reshape(num_filters,num_channels,-1)\n",
     "        g_gradients = theano.tensor.concatenate([ws_grad*0, ws_grad*0, ws_grad*0, ws_grad*0, ws_grad*0], axis=2)*additions\n",
+    "        print(additions.dtype)\n",
     "        gs_gradients.append(g_gradients)\n",
+    "        \n",
     "    gs_updates = nn.updates.adam_dev(gs_gradients, gs)\n",
     "    return gs_updates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "float32\n",
+      "1\n",
+      "float32\n",
+      "0.09156195399555145\n"
+     ]
+    }
+   ],
    "source": [
     "start = timeit.default_timer()\n",
     "gs_updates = g_updates_dev(loss, params, gs)\n",
     "stop = timeit.default_timer()\n",
     "print(stop - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from collections import OrderedDict\n",
+    "updates = OrderedDict()\n",
+    "updates_old = nn.updates.adam(loss, params, learning_rate=lr)\n",
+    "for i in range (0,len(gs)):\n",
+    "    print(i)\n",
+    "    gs_new = gs_updates[gs[0]]\n",
+    "    ws = params[i*2]\n",
+    "    [num_filters, num_channels, filter_size, filter_size] = ws.get_value().shape\n",
+    "    W = gabor_weight_update([num_filters, num_channels, filter_size, filter_size], gs_new)\n",
+    "    #updates[ws] = theano.shared(W)\n",
+    "    updates[ws] = W\n",
+    "    updates[params[i*2+1]] = updates_old[params[i*2+1]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "updates[params[0]].dtype"
    ]
   },
   {
@@ -282,30 +318,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'gabor_filter_dev2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-31eb62d18fb0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#filter_ps = [gabor_filter(0,0,params),gabor_filter(0,0,params),gabor_filter(0,0,params),gabor_filter(0,0,params)]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m#np.array(filter_ps)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgabor_filter_dev2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mlis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'gabor_filter_dev2' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "w_gradients = np.ones([4,4,5])\n",
     "trys = theano.shared(w_gradients)\n",
     "#trys.eval()\n",
-    "a = gs[0][0,0,1]\n",
+    "g_try = gs_updates[gs[0]]\n",
+    "#a = gs[0][0,0,1]\n",
+    "a = g_try[0,0][1]\n",
     "params = [a,a,a,a,a]\n",
     "#filter_ps = [gabor_filter(0,0,params),gabor_filter(0,0,params),gabor_filter(0,0,params),gabor_filter(0,0,params)]\n",
     "#np.array(filter_ps)\n",
@@ -314,9 +340,8 @@
     "for i in range(0,9):\n",
     "    lis.append(x)\n",
     "y = theano.tensor.stack(lis)\n",
-    "a\n",
-    "#y = y.reshape((3,3))\n",
-    "#theano.tensor.concatenate([x,x])"
+    "y = y.reshape((3,3))\n",
+    "y.dtype"
    ]
   },
   {
@@ -330,21 +355,32 @@
    "outputs": [],
    "source": [
     "g_try = gs_updates[gs[0]]\n",
-    "nn.layers.gabor.gabor_filter_initiation([4, 1, 3, 3], g_try)\n",
-    "g_try.shape"
+    "updates\n",
+    "g_try.dtype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'float32'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gs_updates[gs[0]][0,0]"
+    "gs_updates[gs[0]].dtype"
    ]
   },
   {
@@ -355,7 +391,8 @@
    },
    "outputs": [],
    "source": [
-    "updates_old = nn.updates.adam(loss, params, learning_rate=lr)"
+    "updates_old = nn.updates.adam(loss, params, learning_rate=lr)\n",
+    "updates_old[params[0]].dtype"
    ]
   },
   {
@@ -366,7 +403,9 @@
    },
    "outputs": [],
    "source": [
-    "gs[0].eval()"
+    "gvalue = gs[0].get_value()\n",
+    "g = gvalue[0,0,:]\n",
+    "g_psi(0,0,g)\n"
    ]
   }
  ],
